temp/objects/C501_ScheduledFlow__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>ScheduledFlows</relationshipLabel>
        <relationshipName>ScheduledFlow</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FireFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FireFlow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>ScheduledFlow</label>
    <nameField>
        <label>Scheduled Flow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Flows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>